# zfree

./: LICENSE  README.md  pyproject.toml  zfree
src/: zfree.py
