[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zfree"
authors = [{name = "multiplealiases", email = "conflictvegetable@protonmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Monitoring"
]
dynamic = ["version", "description"]
requires-python = ">=3.6, <4.0"

[project.scripts]
zfree = "zfree:main"
